fix: footer spacing

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,6 @@ body>footer {
   display: block;
   position: relative;
   margin: 0;
-  margin-top: 9rem;
   padding: 3rem;
   width: 100%;
   background: $overlays-bg-dark-opaque;
